<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>epa-ps-sim</artifactId>
        <groupId>de.gematik.epa</groupId>
        <version>2.1.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>epa-ps-sim-lib</artifactId>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <hapifhir.version>8.2.0</hapifhir.version>
        <openapi.directory>${project.basedir}/src/main/resources/api</openapi.directory>
    </properties>
    <dependencies>
        <!-- ePA dependencies -->
        <dependency>
            <groupId>de.gematik.epa</groupId>
            <artifactId>epa-ps-sim-api</artifactId>
            <version>${project.parent.version}</version>
        </dependency>
        <dependency>
            <groupId>de.gematik.epa</groupId>
            <artifactId>epa-fm-java-api</artifactId>
            <version>${project.parent.version}</version>
        </dependency>

        <!-- other Gematik dependencies -->
        <dependency>
            <groupId>de.gematik.idp</groupId>
            <artifactId>idp-client</artifactId>
            <version>${idp.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>org.springframework</groupId>
                    <artifactId>spring-web</artifactId>
                </exclusion>
            </exclusions>
        </dependency>


        <!-- 3rd party dependencies -->
        <dependency>
            <groupId>jakarta.xml.ws</groupId>
            <artifactId>jakarta.xml.ws-api</artifactId>
            <version>4.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.glassfish.jaxb</groupId>
            <artifactId>jaxb-runtime</artifactId>
            <version>4.0.5</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcutil-jdk18on</artifactId>
            <version>${version.bouncycastle}</version>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-base</artifactId>
            <version>${hapifhir.version}</version>
        </dependency>

        <!-- Include the client -->
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-client</artifactId>
            <version>${hapifhir.version}</version>
        </dependency>

        <!-- At least one "structures" JAR must also be included -->
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-structures-r4</artifactId>
            <version>${hapifhir.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-rs-client</artifactId>
            <version>${apache.cxf.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-features-logging</artifactId>
            <version>${apache.cxf.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxws</artifactId>
            <version>${apache.cxf.version}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.eclipse.angus</groupId>
                    <artifactId>angus-mail</artifactId>
                </exclusion>
            </exclusions>
        </dependency>


        <dependency>
            <groupId>com.fasterxml.jackson.jakarta.rs</groupId>
            <artifactId>jackson-jakarta-rs-json-provider</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.datatype</groupId>
            <artifactId>jackson-datatype-jsr310</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- test dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-inline</artifactId>
            <version>${mockito-inline.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-reload4j</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>com.soebes.maven.plugins</groupId>
                <artifactId>iterator-maven-plugin</artifactId>
                <version>0.5.1</version>
                <executions>
                    <execution>
                        <id>generateClient</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>iterator</goal>
                        </goals>
                        <configuration>
                            <items>
                                <item>authorization</item>
                                <item>information</item>
                                <item>entitlement</item>
                                <item>medication-render</item>
                                <item>email</item>
                                <item>consent-decision</item>
                                <item>audit</item>
                                <item>audit-render</item>
                                <item>vau</item>
                            </items>
                            <pluginExecutors>
                                <pluginExecutor>
                                    <plugin>
                                        <groupId>org.openapitools</groupId>
                                        <artifactId>openapi-generator-maven-plugin</artifactId>
                                        <version>7.4.0</version>
                                    </plugin>
                                    <goal>generate</goal>
                                    <configuration>
                                        <inputSpec>${openapi.directory}/@item@-client.yaml</inputSpec>
                                        <generateApiTests>false</generateApiTests>
                                        <generatorName>jaxrs-cxf-client</generatorName>
                                        <output>${project.build.directory}/generated-sources</output>
                                        <apiPackage>de.gematik.epa.api.@item@.client</apiPackage>
                                        <modelPackage>de.gematik.epa.api.@item@.client.dto</modelPackage>
                                        <configOptions>
                                            <interfaceOnly>true</interfaceOnly>
                                            <useJakartaEe>true</useJakartaEe>
                                            <dateLibrary>java8</dateLibrary>
                                            <sourceFolder>/</sourceFolder>
                                            <useGenericResponse>true</useGenericResponse>
                                        </configOptions>
                                    </configuration>
                                </pluginExecutor>
                            </pluginExecutors>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <!-- provide test classes to other maven modules of this project (e.g. TestDataFactory) -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>test-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
